--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
-certifi==2021.5.30
-charset-normalizer==2.0.3
-ez-setup==0.9
-idna==3.2
-requests==2.26.0
+spotipy==2.23.0
+youtube_dl
+youtube_search
+certifi==2024.2.2
+charset_normalizer
+ez_setup
+idna==3.6
+requests==2.31.0
 six==1.16.0
-spotipy==2.18.0
-urllib3==1.26.6
-youtube-dl==2021.6.6
-youtube-search==2.1.0
+urllib3==2.2.1
+certifi>=2021.5.30
+charset-normalizer>=2.0.3
+ez-setup>=0.9
+idna>=3.2
+requests>=2.26.0
+six>=1.16.0
